# advent-of-code

2022/elixir/: day-1.exs  day-2.exs  day-3.exs  day-4.exs  day-5.exs
2023/elixir/: day-1.exs
2023/ocaml/: .gitignore  .ocamlformat  aoc.opam  dune-project
2023/ocaml/lib/: aoc.ml  base.ml  dune
